gap correct

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ html {
 .subscribe__content {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 15px;
 }
 
 .subscribe__img {
